# ncnn_learn

./: CMakeLists.txt  onnx2ncnn.xmind
.github/workflows/: linux-loongarch64-cpu-gcc.yml  release-python.yml
examples/: squeezenet.cpp
squeezenet/: CMakeLists.txt  squeezenet.cpp
src/: allocator.cpp  allocator.h  layer.h  net.cpp  net.h
src/layer/: innerproduct.cpp  innerproduct.h
tests/: test_memory.cpp
tools/onnx/: mobilenetv2.param
